# ios-yt-transcript

./: README.md  pyproject.toml  requirements.txt
scripts/: get_transcript.py
server/: main.py
tests/: test_fetcher.py  test_pipeline.py
transcript_service/: __init__.py  pipeline.py
