[project]
name = "ios-yt-transcript"
version = "0.1.0"
description = "Utilities for fetching YouTube transcripts for iOS Shortcuts."
readme = "README.md"
authors = [{ name = "iOS YouTube Transcript Toolkit" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[yaml]",
    "youtube-transcript-api",
    "pydantic",
]

[tool.uv]
dev-dependencies = [
    "ruff",
]

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",
    "F",
    "I",
    "B",
]

[tool.ruff.lint.isort]
known-first-party = ["transcript_service", "server", "scripts"]
